package view;

import common.Util;

public class PauseButton extends GameObject {
  public PauseButton(String imageResourcePath) {
    super(imageResourcePath, Util.WIDTH - 100 , 50, 100);
  }
}
