@startuml

title __VIEW's Class Diagram__\n

  namespace  {
    namespace iew {
      class view.Background {
          - height : int
          - images : BufferedImage[]
          - maxVelocity : int
          - velocity : int
          - width : int
          - x : int
          + Background()
          + draw()
          + getMaxVelocity()
          + getVelocity()
          + setMaxVelocity()
          + setVelocity()
          + updateBackgroundPosition()
      }
    }
  }
  

  namespace  {
    namespace iew {
      class view.CharacterView {
          + jumpStartTime : long
          - ground : int
          + CharacterView()
          + getGround()
      }
    }
  }
  

  namespace  {
    namespace iew {
      class view.GameObject {
          - image : BufferedImage
          + GameObject()
          + GameObject()
          + draw()
          + setImage()
      }
    }
  }
  

  namespace  {
    namespace iew {
      class view.Obstacle {
          - velocity : double
          + Obstacle()
          + setVelocity()
          + updateObstaclePosition()
      }
    }
  }
  

  namespace  {
    namespace iew {
      class view.PauseButton {
          + PauseButton()
      }
    }
  }
  

  namespace  {
    namespace iew {
      class view.PowerUpView {
          - velocity : int
          + PowerUpView()
          + setVelocity()
          + updatePosition()
      }
    }
  }
  

  namespace  {
    namespace iew {
      enum TYPE {
        A
        B
        C
        D
        multiplier
      }
    }
  }
  

  view.CharacterView -up-|> view.GameObject
  view.GameObject -up-|> modal.Object2D
  view.Obstacle -up-|> view.GameObject
  view.PauseButton -up-|> view.GameObject
  view.PowerUpView -up-|> view.GameObject
  view.PowerUpView o-- view.PowerUpView.TYPE : type
  view.PowerUpView +-down- view.PowerUpView.TYPE


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
